[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/GameWorld.gd" type="Script" id=1]
[ext_resource path="res://Images/inhabitant_1_up.png" type="Texture" id=3]
[ext_resource path="res://Images/inhabitant_1_right.png" type="Texture" id=4]
[ext_resource path="res://Images/inhabitant_1_down.png" type="Texture" id=5]
[ext_resource path="res://Images/inhabitant_1_left.png" type="Texture" id=6]
[ext_resource path="res://Scenes/ObjectsTileMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Inhabitant.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Train/Train.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 11, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 11, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 16, 11, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 11, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 12, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 12, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 12, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 12, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 1 ), SubResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 4.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 6 ) ],
"loop": true,
"name": "left",
"speed": 4.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 7 ), SubResource( 9 ) ],
"loop": true,
"name": "up",
"speed": 4.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 12 ) ],
"loop": true,
"name": "down",
"speed": 4.0
} ]

[node name="GameWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="GroundTileMap" parent="." instance=ExtResource( 7 )]
position = Vector2( -8, -8 )
cell_y_sort = false
tile_data = PoolIntArray( 7, 16, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 16, 0, 15, 16, 0, 16, 16, 0, 17, 16, 0, 18, 16, 0, 19, 16, 0, 20, 16, 0, 21, 16, 0, 65541, 1, 0, 65559, 14, 0, 196612, 0, 0, 196632, 0, 0, 262148, 0, 0, 262168, 0, 0, 327684, 0, 0, 327704, 0, 0, 393220, 0, 0, 393240, 0, 0, 458756, 0, 0, 458776, 0, 0, 524292, 0, 0, 524312, 0, 0, 655357, 4, 0, 589828, 0, 0, 589848, 0, 0, 655364, 0, 0, 655384, 0, 0, 720900, 0, 0, 720920, 0, 0, 786436, 0, 0, 786456, 0, 0, 851972, 0, 0, 851992, 0, 0, 917508, 0, 0, 917528, 0, 0, 983044, 0, 0, 983064, 0, 0, 1048580, 0, 0, 1048600, 0, 0, 1114116, 0, 0, 1114136, 0, 0, 1179652, 0, 0, 1179672, 0, 0 )

[node name="SurfaceTileMap" parent="." instance=ExtResource( 7 )]
position = Vector2( -8, -8 )
cell_y_sort = false
tile_data = PoolIntArray(  )
map_type = 1

[node name="EntitiesTileMap" parent="." instance=ExtResource( 7 )]
position = Vector2( -8, -8 )
tile_data = PoolIntArray(  )
map_type = 2

[node name="Inhabitant" parent="EntitiesTileMap" instance=ExtResource( 8 )]
position = Vector2( 8, 8 )
frames = SubResource( 13 )
frame = 0

[node name="Controllers" type="Node2D" parent="."]
__meta__ = {
"_editor_description_": "Used to control groups of entities that must act as one system, like a train."
}

[node name="Train" parent="Controllers" instance=ExtResource( 9 )]
position = Vector2( -512, -64 )
